# test-llvm-haskell-project

./: log-llvm-config-ERROR.txt  test-llvm-haskell-project.cabal
Dockercontainer/Hiwi_Jaime/: .HowToDocker.txt  .dockerignore  Dockerfile
Dockercontainer/Hiwi_Jaime/test-llvm-haskell-project/: CHANGELOG.md  LICENSE  README.md  cabal.project  tags  test-llvm-haskell-project.cabal
Dockercontainer/Hiwi_Jaime/test-llvm-haskell-project/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  up-to-date
app/: Main.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
llvm-ffi-16.0/: round-avx-opt.bc  round-avx.bc
llvm-ffi-16.0/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
llvm-ffi-16.0/dist-newstyle/packagedb/ghc-9.4.5/: llvm-ffi-16.0-inplace.conf  package.cache
synthesizer-llvm-1.1.0.1/: Changes.md  inblues.mid
synthesizer-llvm-1.1.0.1/alsa/Synthesizer/LLVM/: Server.hs
synthesizer-llvm-1.1.0.1/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
synthesizer-llvm-1.1.0.1/dist-newstyle/packagedb/ghc-9.4.5/: package.cache  synthesizer-llvm-1.1.0.1-inplace-server.conf  synthesizer-llvm-1.1.0.1-inplace.conf
synthesizer-llvm-1.1.0.1/example/Synthesizer/LLVM/: .Test.hs.swo  ExampleUtility.hs  LAC2011.hs  LNdW2011.hs  Test.hs  TestALSA.hs
synthesizer-llvm-1.1.0.1/src/Synthesizer/LLVM/: Complex.hs  (+12 more)
synthesizer-llvm-1.1.0.1/testsuite/Test/: Main.hs
(+81 files in other folders)
