cabal-version:      3.0
name:               test-llvm-haskell-project
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Jaime De la Cal
maintainer:         info@soundtribe.ch
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable test-llvm-haskell-project
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:   
      base >=3 && <5,
      haskell-say ^>= 1.0.0.0,
      llvm-ffi ^>= 16.0,
      enumset >=0.0.5 && <0.2,
      llvm-tf
      
    extra-lib-dirs:      /usr/lib64/llvm-16/lib
    extra-include-dirs:  /usr/lib64/llvm-16/include

    hs-source-dirs:   app
    default-language: Haskell2010

--package llvm-ffi
--  flags: llvm14
--  extra-include-dirs: /usr/lib64/llvm14/include
--  extra-lib-dirs: /usr/lib64/llvm14/lib
